# Source

./: .appveyor.yml  .gitignore  .travis.yml  GraySvr.vcxproj  GraySvr.vcxproj.filters  README.md  Sphere.ini  SphereSvr.vcxproj  SphereSvr.vcxproj.filters  TODO.TXT  appveyor.yml  changelog.txt  knownbugs.txt  lgtm.yml  makefile  makefile.alt  makefile.fbsd  sphere.dic  sphereCrypt.ini  test.txt
0.56.b/: Sphere.ini  knownbugs.txt  sphere.dic  sphereCrypt.ini
0.57.1/: makefile  sphere.dsp  sphere.dsw
common/: CArray.h  CAtom.h  CDataBase.cpp  CDataBase.h  CDatabaseLoader.cpp  CDatabaseLoader.h  CEncrypt.cpp  CEncrypt.h  CException.cpp  CException.h  CExpression.cpp  CExpression.h  CFile.cpp  CFile.h  CFileList.cpp  CFileList.h  CGrayData.cpp  CGrayInst.cpp  CGrayInst.h  CGrayMap.cpp  CGrayMap.h  CMD5.h  CMapCache.h  CMemBlock.h  CQueue.cpp  CQueue.h  CRect.cpp  CRect.h  CRegion.cpp  CRegion.h  CResourceBase.cpp  CResourceBase.h  CScript.cpp  CScript.h  CScriptCompiler.cpp  CScriptCompiler.h  CScriptObj.cpp  CScriptObj.h  CSectorTemplate.cpp  CSectorTemplate.h  (+25 more)
docs/: Doxyfile  Installer.bat  REVISIONS-51-54-SERIES.TXT  REVISIONS-55-SERIES.TXT  REVISIONS-56-Pre_release.TXT  REVISIONS-56-SERIES.TXT  REVISIONS-56a-Pre_release.TXT  REVISIONS-56b-Pre_release.TXT  REVISIONS-56c-Pre_release.TXT  Revisions.txt  SpeechKeywords.txt  Sphere.ini  ToDo.txt  new_tooltips_info.txt  precompiler.txt  sounds.txt  sphere.dic  sphereCrypt.ini
graysvr/: CAccount.cpp  CAccount.h  CBase.h  CChar.cpp  CCharBase.cpp  CCharFight.cpp  CCharNPC.cpp  CCharNPCAct.cpp  CCharNPCPet.cpp  CCharNPCStatus.cpp  CCharSkill.cpp  CCharSpell.cpp  CCharStatus.cpp  CCharUse.cpp  CCharact.cpp  CChat.cpp  CClient.cpp  CClient.h  CClientDialog.cpp  CClientEvent.cpp  CClientLog.cpp  CClientMsg.cpp  CClientTarg.cpp  CClientUse.cpp  CContain.cpp  CGMPage.cpp  CItem.cpp  CItemBase.cpp  CItemMulti.cpp  CItemMultiCustom.cpp  CItemShip.cpp  CItemSp.cpp  CItemStone.cpp  CItemVend.cpp  CLog.cpp  CObjBase.cpp  CObjBase.h  CPathFinder.cpp  CPathFinder.h  CQuest.cpp  (+24 more)
scripts/: adddialog.db  sphere_add_sqlite.scp  sphere_admin.scp  sphere_backward_compatibility.scp  sphere_book.scp  sphere_combat.scp  sphere_defs.scp  sphere_defs_2.scp  sphere_dialog.scp  sphere_events_human.scp  sphere_events_npcs.scp  sphere_menu.scp  sphere_msgs.scp  sphere_name.scp  sphere_newb.scp  sphere_region.scp  sphere_serv_triggers.scp  sphere_skillmenu.scp  sphere_skills.scp  sphere_spawns.scp  sphere_speech.scp  sphere_spells.scp  sphere_template.scp  sphere_template_armor.scp  sphere_template_loot.scp  sphere_template_magic.scp  sphere_template_misc.scp  sphere_template_sets.scp  sphere_template_vend.scp  sphere_template_weapons.scp  sphere_triggers.scp  sphere_types.scp  spheretables.scp
sphere/: asyncdb.cpp  asyncdb.h  linuxev.cpp  linuxev.h  mutex.cpp  mutex.h  network.h  networkdata.cpp  networkdata.h  queue.cpp  queue.h  strings.cpp  strings.h  threads.cpp  threads.h
src/: CMakeGitStatus.cmake  CMakeLists.txt  CMakeMINGW.cmake  CMakeMSVC.cmake  CMakeSources.cmake  CMakeUnix.cmake  Sphere.ini  doxygen.cfg  sphere.ini  sphereCrypt.ini
src/common/: CArray.cpp  CArray.h  CAssoc.cpp  CAssoc.h  CAtom.cpp  CCSVFile.cpp  CCSVFile.h  CCacheableScriptFile.cpp  CCacheableScriptFile.h  CDataBase.cpp  CDataBase.h  CEncrypt.cpp  CEncrypt.h  CException.cpp  CException.h  CExpression.cpp  CExpression.h  CFile.cpp  CFile.h  CFileList.cpp  CFileList.h  CGrayData.cpp  CGrayInst.cpp  CGrayInst.h  CGrayMap.cpp  CGrayMap.h  CListDefMap.cpp  CMD5.cpp  CMD5.h  CMapCache.cpp  CMemBlock.h  CQueue.cpp  CQueue.h  CRect.cpp  CRect.h  CRegion.cpp  CRegion.h  CResourceBase.cpp  CResourceBase.h  CScript.cpp  (+33 more)
src/common/crashdump/: crashdump.cpp  crashdump.h  mingwdbghelp.h
src/common/libev/: ev.c  ev.h  ev_config.h  ev_linuxaio.c  wrapper_ev.c
src/common/mysql/: README
src/common/mysql/docs/: ChangeLog  INFO_BIN  INFO_SRC
src/common/mysql/include/: libmysql.def  my_config.h  mysql.h  mysql_com.h  mysqld_error.h
src/common/mysql/lib/debug/: mysqlclient.lib  zlib.lib
src/common/mysql/lib/release/: mysys-max.lib  regex.lib
src/common/sqlite/: SQLite.cpp  SQLite.h
src/common/subversion/: svnwcrev
src/common/twofish/: aes.h  platform.h  twofish2.cpp
src/common/version/: GitRevision.h  GitRevision.h.in
src/common/zlib/: deflate.c  zconf.h
src/dbdll/: SphereDbDll.sln
src/dbdll/mysql/: MySqlConnection.h  MySqlPlugin.cpp  makefile  mysql.vcxproj.filters
src/dbdll/odbc/: OdbcConnection.h  OdbcPlugin.cpp
src/graysvr/: CAccount.cpp  CAccount.h  CBase.cpp  CBase.h  CChar.cpp  CChar.h  CCharAct.cpp  CCharBase.cpp  CCharBase.h  CCharFight.cpp  CCharNPC.cpp  CCharNPCAct.cpp  CCharNPCPet.cpp  CCharNPCStatus.cpp  CCharSkill.cpp  CCharSpell.cpp  CCharStatus.cpp  CCharUse.cpp  CCharact.cpp  CChat.cpp  CChat.h  CClient.cpp  CClient.h  CClientDialog.cpp  CClientEvent.cpp  CClientGMPage.cpp  CClientLog.cpp  CClientMsg.cpp  CClientTarg.cpp  CClientUse.cpp  CContain.cpp  CGMPage.cpp  CGMPage.h  CItem.cpp  CItem.h  CItemBase.cpp  CItemBase.h  CItemMulti.cpp  CItemMulti.h  CItemMultiCustom.cpp  (+61 more)
src/network/: network.cpp  network.h  packet.cpp  packet.h  receive.cpp  receive.h  send.cpp  send.h
src/sphere/: ProfileData.cpp  ProfileData.h  asyncdb.cpp  asyncdb.h  containers.h  linuxev.cpp  linuxev.h  mutex.cpp  mutex.h  strings.cpp  strings.h  threads.cpp  threads.h
src/tables/: CBaseBaseDef_props.tbl  CCharBase_props.tbl  CCharNpc_props.tbl  CCharPlayer_functions.tbl  CCharPlayer_props.tbl  CChar_functions.tbl  CChar_props.tbl  CClient_functions.tbl  CFileObjContainer_functions.tbl  CFileObjContainer_props.tbl  CFile_props.tbl  CItemBase_props.tbl  CItemStone_functions.tbl  CItemStone_props.tbl  CItem_props.tbl  CObjBase_functions.tbl  CObjBase_props.tbl  CScriptObj_functions.tbl  CStoneMember_props.tbl  classnames.tbl  defmessages.tbl  triggers.tbl
src/tests/: threads.cpp
src/tests/sample/: aborter.cpp  stdio_printer.cpp  tests.cpp
tables/: CBaseBaseDef_props.tbl  CCharBase_props.tbl  CCharNpc_props.tbl  CCharPlayer_props.tbl  CChar_functions.tbl  (+18 more)
(+1026 files in other folders)
